Row: css fix for collapsed rows with empty title

--- a/src/css/less/overrides.less
+++ b/src/css/less/overrides.less
@@ -181,6 +181,7 @@ form input.ng-invalid {
   font-size: 0.9em;
   text-align: center;
   line-height: 31px;
+  height: 31px;
 }
 
 .row-close {
